tests/solidity-semantic-tests/out/errors/require_error_string_literal/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_string_literal.sol.C.approval_program() -> uint64:
main:
    txn ApplicationID
    bnz main_after_if_else@2
    pushint 1
    return

main_after_if_else@2:
    pushint 4096
    bzero
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x2d4970c7 0xf2b65f27 // method "f()void", method "g()void"
    txna ApplicationArgs 0
    match main_f_route@5 main_g_route@6
    err

main_g_route@6:
    err // CustomError

main_f_route@5:
    err // CustomError
